Copy colours from darkmode to lightmode, adjust responsive font fear headings, fix home screen svg opacity

--- a/src/style/components/global.scss
+++ b/src/style/components/global.scss
@@ -383,6 +383,11 @@ h2 {
     margin: 0.5em 0 0.5em 0;
     font-size: 4rem;
 }
+@media (max-width: 500px) {
+    h2 {
+        font-size: 3rem;
+    }
+}
 
 h3 {
     margin: 0.5em 0 1em 0;
