rework publication section

--- a/src/style/screen.scss
+++ b/src/style/screen.scss
@@ -20,6 +20,7 @@ production stylesheet in assets/built/screen.scss using gulp dev
 @import "components/animations.scss";
 @import "components/prism.scss";
 @import "components/svgs.scss";
+@import "components/tag.scss";
 
 /* Main - Theme styles
 /* ---------------------------------------------------------- */
