--- a/src/style/screen.scss
+++ b/src/style/screen.scss
@@ -54,6 +54,10 @@ body {
 /* Layout
 /* ---------------------------------------------------------- */
 
+.bottom-margin {
+  margin-bottom: 4rem;
+}
+
 .site-wrapper {
   display: flex;
   flex-direction: column;
