--- a/src/style/components/buttons.scss
+++ b/src/style/components/buttons.scss
@@ -1,6 +1,18 @@
 /* Buttons
 /* ---------------------------------------------------------- */
 
+// handle link within button
+.button a {
+    color: inherit;
+    text-decoration: none;
+}
+
+// remove underline on hover
+.button a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
