--- a/src/style/components/buttons.scss
+++ b/src/style/components/buttons.scss
@@ -102,12 +102,12 @@ input[type="button"]:hover,
 button:hover,
 .button:hover {
     text-decoration: none;
-    color: color(#{$color-primary} l(-15%)) !important;
-    box-shadow: inset 0 0 0 2px color(#{$color-primary} l(-10%));
+    color: darken($color-primary, 15%) !important;
+    box-shadow: inset 0 0 0 2px darken($color-primary, 15%);
     transition: 0.2s ease;
     @include light-mode {
-      color: color(#{$color-primary-light} l(-15%)) !important;
-      box-shadow: inset 0 0 0 2px color(#{$color-primary-light} l(-10%));
+      color: darken($color-primary-light, 15%) !important;
+      box-shadow: inset 0 0 0 2px darken($color-primary-light, 15%);
     }
 }
 
@@ -131,8 +131,8 @@ input[type="reset"].primary:hover,
 input[type="button"].primary:hover,
 button.primary:hover,
 .button.primary:hover {
-    background-color: color(#{$color-primary} l(-10%));
+    background-color: darken($color-primary, 15%);
     @include light-mode {
-      background-color: color(#{$color-primary-light} l(-10%));
+      background-color: darken($color-primary-light, 15%);
     }
  }
