--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -30,13 +30,15 @@ $radius: 0.5rem;
 
 /* Colours */
 $color-body-font: rgb(248,247,255);
-$color-primary: rgb(48, 188, 237); 
+// $color-primary: rgb(48, 188, 237);
+$color-primary: rgb(100, 141, 229); 
 $color-base: rgb(25,25,25);
 $color-sub-base: #aaa;
 $color-border: rgb(116,117,114);
 $color-bg: rgb(25,25,25);
 $color-bg-dark: #131313;
-$link-color: rgb(48, 188, 237);
+// $link-color: rgb(48, 188, 237);
+$link-color: $color-primary; 
 $color-bg-bright: rgb(116,117,114);
 $yellow: rgb(246, 209, 58);
 $color-primary-light: rgb(48, 188, 237);
